--- a/style.css
+++ b/style.css
@@ -9,3 +9,30 @@ html, body {
     width: 100%;
 }
 
+html{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #68BA7F;
+    color: #222121;
+}
+
+#main{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.card{
+    height: 100px;
+    width: 150px;
+    background-color: #cfffdc;
+    border-radius: 1.4rem;
+    border: 0.2rem solid #253d2c;
+}
+
+.card h1{
+    font-size: 2.4rem;
+    text-align: center;
+}
